syntax = "proto3";
package mmp.im.protocol;


import "google/protobuf/any.proto"; // 继承 使用Any必须要导入Any.proto

option java_outer_classname = "ServerMessageBody";

message ServerMessage {

    int64 seq = 1;
    string from = 2;
    string to = 3;

    // uint32 type = 4;
    MsgType type = 4;

    // bytes data = 5;
    google.protobuf.Any data = 5;

    enum MsgType {
        SERVER_LOGIN = 0;

        SERVER_LOGOUT = 1;
        USER_LOGIN = 2;
        USER_LOGOUT = 3;
        USER_TOKEN = 4;
    }

    message ServerLogin {
        string name = 1;
    }
    message ServerLogout {
        string name = 1;
    }
    message UserLogin {
        string name = 1;
    }
    message UserLogout {
        string name = 1;
    }

    message UserToken {
        string name = 1;
    }
}